--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   modal_progress_hud: ^0.1.3
   provider: ^6.0.1
+  firebase_auth: ^3.1.1
+  cloud_firestore: ^2.5.3
+  firebase_core: ^1.6.0
 
 dev_dependencies:
   flutter_test:
